--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/mongodb": "^3.6.12",
     "@types/mongoose": "^5.10.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
